--- a/vignettes/lasso.Rmd
+++ b/vignettes/lasso.Rmd
@@ -1,28 +1,30 @@
 ---
 title: "Using the lasso estimator with regmodelsuite"
-output: rmarkdown::html_vignette
+output: 
+  rmarkdown::html_vignette:
+    toc: true          
+    toc_depth: 2       
 vignette: >
   %\VignetteIndexEntry{lasso}
   %\VignetteEngine{knitr::rmarkdown}
   %\VignetteEncoding{UTF-8}
 ---
 
-# Introduction
+## Generating Test Data
 
 This vignette demonstrates how to estimate a LASSO regression model using the `regmodelsuite` package. LASSO is a type of linear regression that includes a penalty to shrink some coefficients to zero, effectively performing variable selection.
 
 First we are going to create some example Data where the number of predictors
-is greater than the number of observations p >> n
+is greater than the number of observations p > n
 
 ```{r}
 library(regmodelsuite)
-library(ggplot2)
 
-set.seed(123)  # For reproducibility
+set.seed(1443)  # For reproducibility
 
 # Parameters
-n <- 400  # Number of observations
-p <- 300  # Number of predictors
+n <- 40  # Number of observations
+p <- 30  # Number of predictors
 
 # Generate predictor matrix (X) with normal distributed values
 X <- matrix(rnorm(n * p), nrow = n, ncol = p)
@@ -37,68 +39,95 @@ beta_true[abs(beta_true) < 0.5] <- 0
 y <- X %*% beta_true + rnorm(n)
 
 # Convert to data frame
-df <- data.frame(X)
-df$y <- y
+full_data <- data.frame(X)
+full_data$y <- y
 
 
 # Split the dataset into a training and test set (50/50)
-Indexes <- sample(1:(nrow(df) * 0.5))
 
-training_set <- df[Indexes , ]
-test_set <- df[-Indexes , ]
+training_indices <- sample(1:nrow(full_data), size = 0.5 * floor(nrow(full_data)))
 
-dim(df)
-dim(training_set)
-dim(test_set)
+training_set <- full_data[training_indices , ]
+test_set <- full_data[-training_indices , ]
+
+cat("Full data dimensions: ", dim(full_data), "\n")
+cat("Training set dimensions: ", dim(training_set), "\n")
+cat("Test set dimensions: ", dim(test_set), "\n")
 
 ```
-To estimate a lasso model the user has to supply a formula into the regmodel
-function. We are going to add all p predictors.
+## Estimate a lasso model with cross validation
 
-Here we use the pre calculated lambda grid with 10 lambdas with 5 folds for
-cross validation.
-```{r}
-# seed for reproducebillity
+To estimate a lasso model with cross validation the user has to supply a formula 
+into the regmodel function. We are going to add all p predictors.
+
+Here we let the \code{regmodel} function create a lambda grid with 10 lambdas
+with 5 folds for cross validation.
+```{r, results = "hide", message = FALSE, warning = FALSE}
 set.seed(2302)
+
 model_formula <- y ~ .
+
 lassoCV <- regmodel(model_formula, data = training_set, model = "lasso", cv = T,
                     nlambda = 10, m = 5)
 
-min_lambda <- lassoCV$min_lambda
-min_lambda
-
-print(lassoCV)
-
 
 ```
-The "lasso_fit" object contains information about the cross validation process. 
-To use the estimated lambda for the final model we can use \code{regmodel} again. 
-It is also possible to extract scaled and unscaled coefficients from the model
-by using coef().
+\ 
+```{r}
+print(lassoCV)
+```
+
+
+
+## Specify a user defined lambda grid
+
+It is also possible to specify a user defined lambda grid.
+```{r}
+lambda_grid <- runif(10 , min = 0,  max = lassoCV$min_lambda + 2)
+print(lambda_grid)
+```
+\ 
+```{r, results = "hide", message = FALSE, warning = FALSE}
+
+lassoCVmanual <- regmodel(model_formula , data = training_set, model = "lasso",
+                          cv = T, lambda = lambda_grid, m = 5)
+```
+\ 
+```{r}
+print(lassoCVmanual)
+```
+
+## Estimating the final model
+
+The \texttt{lassoCVmanual} object contains information about the cross validation 
+process. To use the estimated lambda for the final model we can use
+\code{regmodel} again.It is also possible to extract scaled and unscaled 
+coefficients from the model by using \code{coef}.
 
 ```{r}
 lasso_fit <- regmodel(model_formula,
                       data = training_set,
                       model = "lasso",
-                      lambda = min_lambda)
-
-print(lasso_fit)
+                      lambda = lassoCVmanual$min_lambda)
 
 # scaled coefficients
 coef(lasso_fit)
-
+```
+\ 
+```{r}
 # unscaled coefficients
 coef(lasso_fit, unscale = TRUE)
-
-
 ```
 
-Predictions can be done by using the \code{predict()} function.
+
+## Predictions 
+
+Predictions can be made by using the \code{predict} function.
 Just calling predict on a lasso object will use the training data set for 
 predictions. By specifying \code{newdata}, the estimated model will be applied to 
 the new data.
 
-```{r}
+```{r, fig.width=8, fig.height=6}
 pred_insample <- predict(lasso_fit)
 print(pred_insample)
 
@@ -110,10 +139,20 @@ print(pred_outofsample)
 
 # Calculate the Mean squared prediction error
 mean((pred_outofsample - test_set$y)^2)
+
+# Plot y and predicted y
+{
+ plot(test_set$y);
+ points(pred_outofsample, col = "red" , pch = 2)
+}
 ```
 
 We can visualize the Mean squared prediction error
-```{r}
-plot(log(lassoCV$lambda_grid), lassoCV$MSPE)
+```{r, fig.width=8, fig.height=6}
+{
+  plot(log(lassoCV$lambda_grid), lassoCV$MSPE,
+     xlab = "Log(Lambda)", ylab = "Mean Squared Prediction Error",
+     main = "MSPE vs. Log(Lambda)")
+}
 ```
 
