--- a/vignettes/lasso.Rmd
+++ b/vignettes/lasso.Rmd
@@ -5,12 +5,12 @@ output:
     toc: true          
     toc_depth: 2       
 vignette: >
-  %\VignetteIndexEntry{lasso}
+  %\VignetteIndexEntry{Using the lasso estimator with regmodelsuite}
   %\VignetteEngine{knitr::rmarkdown}
   %\VignetteEncoding{UTF-8}
 ---
 
-## Generating Test Data
+## Generae Test Data
 
 This vignette demonstrates how to estimate a LASSO regression model using the `regmodelsuite` package. LASSO is a type of linear regression that includes a penalty to shrink some coefficients to zero, effectively performing variable selection.
 
@@ -122,16 +122,14 @@ coef(lasso_fit, unscale = TRUE)
 
 ## Predictions 
 
-Predictions can be made by using the \code{predict} function.
+Predictions can be made by using the predict function.
 Just calling predict on a lasso object will use the training data set for 
-predictions. By specifying \code{newdata}, the estimated model will be applied to 
+predictions. By specifying newdata, the estimated model will be applied to 
 the new data.
 
-```{r, fig.width=8, fig.height=6}
+```{r, fig.width=6, fig.height=4}
 pred_insample <- predict(lasso_fit)
 print(pred_insample)
-
-cat("----------------------------------------------------------- \n \n")
 
 # Now use the test set
 pred_outofsample <- predict(lasso_fit, newdata = test_set)
@@ -148,7 +146,7 @@ mean((pred_outofsample - test_set$y)^2)
 ```
 
 We can visualize the Mean squared prediction error
-```{r, fig.width=8, fig.height=6}
+```{r, fig.width=6, fig.height=4}
 {
   plot(log(lassoCV$lambda_grid), lassoCV$MSPE,
      xlab = "Log(Lambda)", ylab = "Mean Squared Prediction Error",
