--- a/vignettes/cv.Rmd
+++ b/vignettes/cv.Rmd
@@ -21,20 +21,6 @@ This vignette demonstrates how to do m-fold cross validation using the `regmodel
 would one, that leads to coefficients, which minimize the mean squared
 prediction error.
 
-# Installation
-
-To use the `regmodelsuite` package, you need to install it first:
-
-\`\`\`r \# If it's available on CRAN install.packages("regmodelsuite")
-
-Or install the development version from GitHub
-
-# install.packages("devtools")
-
-devtools::install_github("jonas7654/regmodelsuite")
-
-
-
 
 ```{r setup}
 library(regmodelsuite)
@@ -42,7 +28,7 @@ library(regmodelsuite)
 
 ## Example Data
 
-Before using regmodelsuite, we generate the data set from Example 2.15 of the book "Statistisches und maschinelles Lernen." (2019) from Richter et. al.
+Before using regmodelsuite, we generate the data set from Example 2.15 of the book "Statistisches und maschinelles Lernen." (2019) from Richter et. al. but we slightly adjust it.
 
 ```{r}
 # Set seed for reproducibility
@@ -56,18 +42,11 @@ X2 <- -X1**3
 X3 <- 0.2*X1**5
 X4 <- runif(n, min = 0, max = 1)
 X5 <- runif(n, min = 0, max = 1)
-X6 <- runif(n, min = 0, max = 1)
-X7 <- runif(n, min = 0, max = 1)
-X8 <- runif(n, min = 0, max = 1)
-X9 <- runif(n, min = 0, max = 1)
-X10 <- runif(n, min = 0, max = 1)
 
 # Add noise to y
 y <- X1 + X2 + X3 + rnorm(n, mean = 0, sd = 0.3)
 
-df <- data.frame(X1 = X1, X4 = X4, X5 = X5, X6 = X6, 
-                 X7 = X7, X8 = X8, X9 = X9, X10 = X10, 
-                 y = y)
+df <- data.frame(X1 = X1, X4 = X4, X5 = X5, y = y)
 ```
 
 ## How to use cross validation in regmodelsuite
@@ -77,12 +56,11 @@ model is chosen. To execute cross validation, set cv = TRUE and select the chose
 
 ```{r}
 # Run Cross Validation for ridge
-ridge_cv <- regmodel(formula = y ~ X1 + I(X1^3) + I(X1^5) + X4 + 
-                       X5 + X6 + X7 + X8 + X9 + X10,
+ridge_cv <- regmodel(formula = y ~ X1 + I(X1^3) + I(X1^5) + X4 + X5,
                 data = df,
                 model = "ridge",
                 cv = TRUE,
-                lambda = seq(0.001, 1, by = 0.001/100))
+                lambda = seq(0.01, 1000, by = 0.008))
 
 # Optimal lambda for Ridge Regression
 print(ridge_cv)
@@ -96,12 +74,12 @@ regression.
 ridge_cv$min_lambda
 
 result_ridge <- regmodel(formula = y ~ X1 + I(X1^3) + I(X1^5) + X4 + 
-                           X5 + X6 + X7 + X8 + X9 + X10,
+                           X5,
                 data = df,
                 model = "ridge",
                 lambda = ridge_cv$min_lambda)
 
-result_ridge$coefficients/result_ridge$sd_x
+coef(result_ridge, unscale = TRUE)
 ```
 You can also plot cv objects, to see how the coefficients changed based on the tested lambdas.
 
@@ -132,7 +110,7 @@ You can provide your own lambda grid to the regmodel function, which will be use
 cross validation.
 
 ```{r}
-lasso_cv <- regmodel(formula = y ~ X1 + I(X1^3) + I(X1^5),
+lasso_cv <- regmodel(formula = y ~ X1 + I(X1^3) + I(X1^5) + X4,
                 data = df,
                 model = "lasso",
                 cv = TRUE,
@@ -145,7 +123,7 @@ plot(lasso_cv)
 You can also adjust the amount of folds used during cross validation. Generally, m = 5 or m = 10 is recommended. A higher m will lead to longer computation, which is why m = 10 is the default in our package. 
 
 ```{r}
-ridge_cv <- regmodel(formula = y ~ X1 + I(X1^3) + I(X1^5),
+ridge_cv <- regmodel(formula = y ~ X1 + I(X1^3) + I(X1^5) + X4 + X5,
                 data = df,
                 model = "ridge",
                 cv = TRUE,
