--- a/vignettes/ridge.Rmd
+++ b/vignettes/ridge.Rmd
@@ -66,7 +66,7 @@ ridgeCV <- regmodel(model_formula, data = training_set, model = "ridge", cv = T)
 
 min_lambda <- ridgeCV$min_lambda
 
-print(ridgeCV)
+print(min_lambda)
 ```
 The "ridge_fit" object contains information about the cross validation process. To use the estimated lambda for the final model we can use regmodel again
 
@@ -76,7 +76,7 @@ ridge_fit <- regmodel(model_formula,
                       model = "ridge",
                       lambda = min_lambda)
 
-print(ridge_fit)
+head(coef(ridge_fit))
 ```
 In this case three variables were selected by the ridge model
 
@@ -87,7 +87,6 @@ the new data.
 
 ```{r}
 pred_insample <- predict(ridge_fit)
-print(pred_insample)
 
 # Now use the test set
 pred_outofsample <- predict(ridge_fit, newdata = test_set)
